css/app.css
html, body, h1 {
  margin: 0;
  padding: 0;
  border: 0;

  color: inherit;
  font: inherit;
  box-sizing: inherit;
  text-decoration: inherit;
}

.group:after {
  content: "";
  display: block;
  clear: both;
}

section {
  margin: 0 auto;

  border: 1px solid #ccccc8;
  height: 500px;
  width: 500px;
}

canvas {
  background: url("images/Stars-fixed.jpg");
}

.game-name {
  text-align: center;
  font-size: 36px;
  font-weight: bold;
}

